k8s/ip/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip
  namespace: ip
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: ip
