k8s/ip/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip
  namespace: ip
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "1"
    nginx.ingress.kubernetes.io/limit-rpm: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ip.bunetz.dev
    secretName: ip-tls
  rules:
  - host: ip.bunetz.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ip
            port:
              name: http-port
